<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <AutoCompleteTextView
        android:id="@+id/sendStationACTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginLeft="@dimen/spacing_normal_16"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/send_station_hint"
        app:layout_constraintEnd_toStartOf="@+id/dropImgSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dropImgSend"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:padding="6dp"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:src="@drawable/ic_expand_more_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/sendStationACTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendStationACTV"
        tools:visibility="visible" />

    <include
        android:id="@+id/wrapInfoSend"
        layout="@layout/container_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginLeft="@dimen/spacing_normal_16"
        android:layout_marginRight="@dimen/spacing_normal_16"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/sendStationACTV"
        tools:visibility="visible" />

    <AutoCompleteTextView
        android:id="@+id/arriveStationACTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginLeft="@dimen/spacing_normal_16"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/arrive_station_hint"
        app:layout_constraintEnd_toStartOf="@+id/dropImgArrive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapInfoSend" />

    <ImageView
        android:id="@+id/dropImgArrive"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:padding="6dp"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:src="@drawable/ic_expand_more_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/arriveStationACTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arriveStationACTV"
        tools:visibility="visible" />

    <include
        android:id="@+id/wrapInfoArrive"
        layout="@layout/container_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginLeft="@dimen/spacing_normal_16"
        android:layout_marginRight="@dimen/spacing_normal_16"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/arriveStationACTV"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textDateView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginLeft="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:textColor="@color/greyBlack"
        android:textSize="@dimen/font_big_24"
        android:fontFamily="@string/roboto_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapInfoArrive"
        android:text="00/00/0000" />

    <Button
        android:id="@+id/editDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/edit_date"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toTopOf="@+id/textDateView"
        app:layout_constraintStart_toEndOf="@+id/textDateView"
        app:layout_constraintTop_toBottomOf="@+id/textDateView" />
</android.support.constraint.ConstraintLayout>
